Aggiunti menu dropdown

--- a/index.html
+++ b/index.html
@@ -18,105 +18,105 @@
                     </div>
                     <ul>
                         <li>
-                            <a class="active" href="">Personale</a>
+                            <a class="active" href="#">Personale</a>
                         </li>
                         <li>
-                            <a href="">Business</a>
+                            <a href="#">Business</a>
                         </li>
                     </ul>
                 </div>
                 <div class="right-header">
                     <ul>
                         <li>
-                            <a href="">Funzionalità</a>
+                            <a href="#">Funzionalità</a>
                             <div class="dropdown">
                                 <ul>
                                     <li>
-                                        <a href="">Azioni</a>
+                                        <a href="#">Azioni</a>
                                     </li>
                                     <li>
-                                        <a href="">Crypto</a>
+                                        <a href="#">Crypto</a>
                                     </li>
                                     <li>
-                                        <a href="">Prodotti</a>
+                                        <a href="#">Prodotti</a>
                                     </li>
                                     <li>
-                                        <a href="">Salvadanai</a>
+                                        <a href="#">Salvadanai</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li>
-                            <a href="">Abbonamenti</a>
+                            <a href="#">Abbonamenti</a>
                             <div class="dropdown">
                                 <ul>
                                     <li>
-                                        <a href="">Standard</a>
+                                        <a href="#">Standard</a>
                                     </li>
                                     <li>
-                                        <a href="">Premium</a>
+                                        <a href="#">Premium</a>
                                     </li>
                                     <li>
-                                        <a href="">Metal</a>
+                                        <a href="#">Metal</a>
                                     </li>
                                     <li>
-                                        <a href="">Confronta i piani</a>
+                                        <a href="#">Confronta i piani</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li>
-                            <a href="">Chi siamo</a>
+                            <a href="#">Chi siamo</a>
                             <div class="dropdown">
                                 <ul>
                                     <li>
-                                        <a href="">Chi siamo</a>
+                                        <a href="#">Chi siamo</a>
                                     </li>
                                     <li>
-                                        <a href="">Blog</a>
+                                        <a href="#">Blog</a>
                                     </li>
                                     <li>
-                                        <a href="">Leadership</a>
+                                        <a href="#">Leadership</a>
                                     </li>
                                     <li>
-                                        <a href="">Affiiate</a>
+                                        <a href="#">Affiiate</a>
                                     </li>
                                     <li>
-                                        <a href="">Influencer</a>
+                                        <a href="#">Influencer</a>
                                     </li>
                                     <li>
-                                        <a href="">Lavora con noi</a>
+                                        <a href="#">Lavora con noi</a>
                                     </li>
                                     <li>
-                                        <a href="">Cultura</a>
+                                        <a href="#">Cultura</a>
                                     </li>
                                     <li>
-                                        <a href="">Diversità e inclusione</a>
+                                        <a href="#">Diversità e inclusione</a>
                                     </li>
                                     <li>
-                                        <a href="">Contatto</a>
+                                        <a href="#">Contatto</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li>
-                            <a href="">Aiuto</a>
+                            <a href="#">Aiuto</a>
                             <div class="dropdown">
                                 <ul>
                                     <li>
-                                        <a href="">Centro assistenza</a>
+                                        <a href="#">Centro assistenza</a>
                                     </li>
                                     <li>
-                                        <a href="">Community</a>
+                                        <a href="#">Community</a>
                                     </li>
                                     <li>
-                                        <a href="">Sicurezza</a>
+                                        <a href="#">Sicurezza</a>
                                     </li>
                                     <li>
-                                        <a href="">Stato di sistema</a>
+                                        <a href="#">Stato di sistema</a>
                                     </li>
                                     <li>
-                                        <a href="">API sviluppatore</a>
+                                        <a href="#">API sviluppatore</a>
                                     </li>
                                 </ul>
                             </div>
@@ -125,10 +125,10 @@
 
                     <ul class="button-container">
                         <li>
-                            <a class="btn btn-grey-bg" href="">Accedi</a>
+                            <a class="btn btn-grey-bg" href="#">Accedi</a>
                         </li>
                         <li>
-                            <a class="btn btn-black-bg" href="">Scarica l'app</a>
+                            <a class="btn btn-black-bg" href="#">Scarica l'app</a>
                         </li>
                     </ul>
                 </div>
