Aggiunta versione uguale al sito

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="main.js" charset="utf-8"></script>
+        <!-- versione 1.0 (apertura e chiusura dropdown al click) -->
+        <!-- <script src="main.js" charset="utf-8"></script>-->
+
+        <!-- versione 2.0 (apertura in hover e chiusura con click da qualsiasi altra parte) -->
+        <script src="./ver2.0/main.js" charset="utf-8"></script>
     </head>
     <body>
         <header>
